# pol

./: .gitignore  ChangeLog.md  README.md  eert.cabal  package.yaml  pol.cabal  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
app/Adapter/: Arguments.hs  CliArgs.hs  Config.hs
app/Adapters/: Arguments.hs
app/IO/: Config.hs  LocalConfig.hs
app/Logic/: Config.hs
app/Types/: AppConfig.hs  CliArguments.hs  EertArguments.hs  LocalConfig.hs
src/: App.hs  AppDraw.hs  AppIO.hs  Lib.hs  Start.hs  StartApp.hs  Types.hs  Utils.hs
src/Adapter/: ETree.hs  Entry.hs  Tree.hs
src/App/: Draw.hs  IO.hs
src/Logic/: EState.hs  ETree.hs  List.hs  TextZipper.hs  Tree.hs  Zipper.hs
src/Types/: App.hs  AppConfig.hs  Base.hs  Brick.hs  EState.hs  ETree.hs  State.hs
