name:                pol
version:             0.2.1
synopsis:            A simple tree-based notetaker
description:         Please see README.md
homepage:            https://github.com/diegospd/pol#readme
license:             GPL-3
license-file:        LICENSE
author:              Diego Murillo
maintainer:          diego.spd@gmail.com
copyright:           2017 Diego Murillo
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Types, Utils, App, AppDraw, AppIO
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , text
                     , data-default
                     , microlens-platform
                     , containers
                     , rosezipper
                     , brick
                     , text-zipper
                     , vty
                     , aeson
                     , string-conversions
                     , turtle

  default-language:    Haskell2010

executable pol
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pol
  default-language:    Haskell2010

test-suite pol-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pol
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/diegospd/pol
